Added .mp3 playback
Implemented .mp3 playback within the bot.

--- a/config.ini
+++ b/config.ini
@@ -2,4 +2,7 @@
 Channel = 
 Client_ID = 
 Token = 
-Playing = no
+Playing = http://github.com/wolfbitez/discordbot/
+Command = !
+File Format = .mp3
+Name = wolfbitez
